--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,8 @@
-MONGODB_HOST=
-MONGODB_DB=
+MONGODB_HOST='mongodb+srv://matferreyra:ChilCast@chillcast.ilfavfb.mongodb.net/'
+MONGODB_DB='ChillCastDB'
 
-JWT_SECRET_KEY=
-JWT_ACCESS_TOKEN_EXPIRES=
+JWT_SECRET_KEY='una_clave_super_secreta'
+JWT_ACCESS_TOKEN_EXPIRES='18000'
 
-FRONT_BASE_URL=
+FRONT_BASE_URL='http://127.0.0.1:5000/'
+
